# Synomix

./: CMakeLists.txt  README.md  Synomix.cpp  Synomix.h
include/simulation_h/: screen.h
src/: Synomix.cpp
src/simulattion/: data.cpp
